fixing spacing between header and main

--- a/src/app/styles/reco-main.scss
+++ b/src/app/styles/reco-main.scss
@@ -5,6 +5,7 @@
     & > main{
         display: flex;
         justify-content: flex-end;
+        margin-top: 0.539em;
 
         a.mainframe{
             flex: 20 1 0;
